# WeiboDR-Uploader

./: .cursorrules  .gitignore  ARCHITECTURE_README.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OFFICIAL_LOGIN_GUIDE.md  QUICK_START.md  R2_CORS_FIX.md  R2_SETUP_GUIDE.md  README.md  REFACTORING_GUIDE.md  UPLOAD_QUEUE_IMPLEMENTATION.md  V2.6_OPTIMIZATION_SUMMARY.md  index-new.html  index-old.html  index.html  login-webview.html  login.html  package-lock.json  package.json  record.md  timeline-fixed.md  tray-menu.html  vite.config.ts  vite.config.ts.timestamp-1765376008427-7c4090b358e37.mjs  文档整理完成总结.md
docs/: DOCUMENTATION_REORGANIZATION.md  PicNexus-Timeline-Feature-Dev-Doc.md  PicNexus-Timeline-Optimization.md  README.md  Timeline-GooglePhotos-Style-Optimization.md  style-design.md  tc-api.md  tc-limits.md  testing-guide.md  third-party-apis.md  ui-fixed.md  webdav-sync-architecture.md
docs/api/: uploaders.md
docs/archive/: CHANGELOG_v1.2.0.md  ENGINEERING_IMPROVEMENTS.md  INSTALL.md  LOGIN_FEATURE.md  PROJECT_SUMMARY.md  R2_MANAGER_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  ROBUSTNESS_IMPROVEMENTS.md  SETTINGS_V2_IMPLEMENTATION.md
docs/debugging/: README.md
docs/fixes/: README.md  timeline-view-switch-blank.md  upload-queue-status-race-condition.md
docs/gotchas/: README.md
docs/guides/: SETTINGS_V2_USER_GUIDE.md  WEBDAV_PATH_GUIDE.md  WEBDAV_SETUP_GUIDE.md
docs/patterns/: README.md  vite-glob-import.md
docs/performance/: README.md
docs/plans/: toast-notification-inventory.md  toast-notification-optimization.md  toast-notification-report.md
docs/tutorial/: README.md
docs/tutorial/01-getting-started/: 01-project-overview.md  02-architecture-overview.md  03-setup-dev-env.md  04-first-run.md  05-directory-tour.md
docs/tutorial/02-core-concepts/: 01-plugin-architecture.md  02-design-patterns.md  03-type-system.md  04-event-driven.md  05-error-handling.md
docs/tutorial/03-frontend-deep-dive/: 01-uploader-interface.md  02-base-uploader.md  03-uploader-factory.md  04-tcl-uploader.md  05-multi-service-uploader.md  06-upload-queue.md  08-crypto-storage.md
docs/tutorial/04-backend-deep-dive/: 01-tauri-main.md  02-rust-commands.md  03-tcl-rust.md  04-http-client.md  05-progress-events.md  06-secure-key-management.md
docs/tutorial/05-communication/: 01-tauri-ipc.md  02-invoke-commands.md  03-event-system.md  04-progress-tracking.md  05-error-propagation.md
sidecar/nami-token-fetcher/src/: token-fetcher.ts
sidecar/qiyu-token-fetcher/: package-lock.json  package.json
sidecar/qiyu-token-fetcher/src/: browser-detector.ts  index.ts  token-fetcher.ts
src/: App.vue  appState.ts  config.ts  coreLogic.ts  crypto.ts  history.html  history.ts  integration-example.ts  login-webview.ts  login.ts  main-new.ts  main-old.ts  main.ts  r2-manager.ts  settings.html  settings.ts  store.ts  style.css  test-uploader.ts  theme.ts  tray-menu.ts  uploadQueue.ts  util-polyfill.ts  weiboUploader.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: bilibili.rs  chaoxing.rs  github.rs  image_meta.rs  imgur.rs  jd.rs  link_checker.rs  mod.rs  nami.rs  nami_token.rs  nowcoder.rs  qiyu.rs  qiyu_token.rs  r2.rs  s3_compatible.rs  smms.rs  tcl.rs  upload.rs  utils.rs  zhihu.rs
src/components/: BackupView.vue  UploadQueue.vue
src/components/common/: ThumbnailImage.vue
src/components/layout/: MainLayout.vue  Sidebar.vue  TitleBar.vue
src/components/settings/: AdvancedSettingsPanel.vue  BackupSyncPanel.vue  BuiltinHostingPanel.vue  CookieAuthHostingPanel.vue  GeneralSettingsPanel.vue  HostingSettingsPanel.vue  LinkPrefixPanel.vue  (+1 more)
src/composables/: useAnalytics.ts  useAutoSync.ts  useBackupSync.ts  useConfig.ts  useConfirm.ts  useHistory.ts  useHistorySaver.ts  useHistoryViewState.ts  useImageLoadManager.ts  useImageMetadata.ts  useQueueState.ts  useServiceAvailability.ts  useServiceSelector.ts  useTheme.ts  useThumbCache.ts  useTimelineSidebarControl.ts  useToast.ts  useUpload.ts  useVirtualTimeline.ts  useWebDAVSync.ts
src/config/: cookieProviders.ts  types.ts
src/core/: LinkGenerator.ts  MultiServiceUploader.ts  UploadOrchestrator.ts  index.ts
src/services/: HistoryDatabase.ts  MarkdownRepairService.ts  RetryService.ts  ShardedHistoryStore.ts  ThumbnailService.ts
src/store/: instances.ts
src/styles/: settings-shared.css
src/theme/: ThemeManager.ts  dark-theme.css  index.ts  light-theme.css  primevue-overrides.css  transitions.css
src/uploaders/: index.ts
src/utils/: cache.ts  debounce.ts  deepClone.ts  filename.ts  formatters.ts  githubCdn.ts  justifiedLayout.ts  network.ts  serviceIcons.ts  timelineFilter.ts  webdav.ts
(+82 files in other folders)
