[package]
name = "picnexus"
version = "1.0.1"
description = "PicNexus - 多图床并行上传工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-confirm", "dialog-open", "dialog-ask", "dialog-message", "dialog-save", "fs-all", "notification-all", "path-all", "http-request", "clipboard-all", "shell-open", "shell-sidecar", "window-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
regex = "1.10"
chrono = "0.4"
quick-xml = "0.36"
urlencoding = "2.1"
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3"
keyring = "2"
rand = "0.8"
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
mime_guess = "2.0"
arboard = "3"
image = { version = "0.24", default-features = false, features = ["png"] }
# headless_chrome 已被 Sidecar (Node.js + Puppeteer) 替代

[target.'cfg(windows)'.dependencies]
windows = { version = "0.39", features = ["Win32_System_Com"] }
webview2-com = "0.19.1"
window-shadows = "0.2"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

