[package]
name = "picnexus"
version = "1.0.1"
description = "PicNexus - 多图床并行上传工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies", "stream", "multipart"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21"
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
regex = "1.10"
chrono = "0.4"
quick-xml = "0.36"
urlencoding = "2.1"
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3"
keyring = "2"
rand = "0.8"
aws-sdk-s3 = { version = "1.0", features = ["behavior-version-latest"] }
mime_guess = "2.0"
arboard = "3"
image = { version = "0.24", default-features = false, features = ["png"] }
tauri-plugin-positioner = { version = "2.0", features = ["tray-icon"] }

[target.'cfg(windows)'.dependencies]
# WebView2 COM 接口 - 用于内存优化
# 使用与 Tauri/wry 相同的版本以避免依赖冲突
webview2-com = "0.38"
windows-core = "0.61"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
